--- a/.travis.yml
+++ b/.travis.yml
@@ -176,7 +176,7 @@ jobs:
             security set-key-partition-list -S apple-tool:,apple: -k mixxx Mixxx.keychain
             # Add keychain to search list
             security list-keychains -s Mixxx.keychain;
-            export APPLE_CODESIGN_IDENTITY=2C2B5D3EDCE82BA55E22E9A67F16F8D03E390870;
+            #export APPLE_CODESIGN_IDENTITY=2C2B5D3EDCE82BA55E22E9A67F16F8D03E390870;
           fi
 
       install:
